Move state status below made by

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -22,9 +22,8 @@
   text-align: left;
 }
 
-.game-details-madeby{
+.game-details-marker{
   position: absolute;
-  left: 0;
   span{
     background: #919da2;
     color: #dcd7c4;
@@ -44,6 +43,9 @@
       border-color: transparent transparent transparent #919da2;
     }
   }
+  .state{
+    top: -1.9rem;
+  }
 }
 
 .game-details{
@@ -53,8 +55,6 @@
 }
 
 .game-details-state{
-  position: absolute;
-  right: 0;
   span{
     background: #003c61;
     color: #c9ceda;
@@ -210,6 +210,7 @@ input#search_user {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  margin-bottom: 1.7rem;
 }
 .gamer-details-author a {
   margin-left: 6rem;
@@ -590,18 +591,22 @@ option {
       font-size: 1.2rem;
     }
   }
-  .game-details-madeby{
+  .game-details-marker{
     span{
       font-size: 1.2rem;
       &:after{
         border-width: 0.9rem 0 0.9rem .9rem;
       }
     }
+    .state{
+      top:-2rem;
+    }
   }
   .gamer-details-author{
     height: auto;
     overflow: auto;
     white-space: normal;
+    margin-bottom: 2.2rem;
   }
   .gamer-details-author a {
     font-size: 1em;
