--- a/app/views/games/_index.html.erb
+++ b/app/views/games/_index.html.erb
@@ -28,18 +28,20 @@
           </div>
           <div class="col-md-12" id="padding-zero">
               <h3 class="game-title-header"><%= link_to g.title, game_path(g), class: "game-title" %></h3>
+
               <div class='game-details'>
-                    <div class='game-details-madeby'>
+                    <div class='game-details-marker'>
                       <span> Made by</span>
                     </div>
                     <p class="gamer-details-author">
                     <%= link_to g.user.company, user_path(g.user) %></p>
+                    <% if (user_is_admin? || user_signed_in? && g.user==current_user) %>
+                      <div class='game-details-marker'>
+                        <span class="state"><%=g.aasm_state%></span>
+                      </div>
+                    <% end %>
               </div>
-              <% if (user_is_admin? || user_signed_in? && g.user==current_user) %>
-                <div class='game-details-state'>
-                  <span><%=g.aasm_state%></span>
-                </div>
-              <% end %>
+
           </div>
         </div>
       </div>
