Update link-to class def to newer style

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -398,8 +398,8 @@ p.control-group {
     background: #003c61;
     color: #c9ceda;
     font-size: 1rem;
-    border-radius: .4rem;
-    padding: .4rem .6rem;
+    border-radius: 0.4rem;
+    padding: 0.4rem 0.6rem;
     font-weight: bold;
   }
 }
@@ -464,7 +464,7 @@ option {
   height:3.2rem;
   font-size:1.5rem;
   overflow: hidden;
-  margin: .5rem .5rem 0.5rem .5rem;
+  margin: 0.5rem 0.5rem 0.5rem 0.5rem;
   padding: 0;
   a{
     padding: 0;
@@ -594,7 +594,7 @@ option {
     span{
       font-size: 1.2rem;
       &:after{
-        border-width: 0.9rem 0 0.9rem .9rem;
+        border-width: 0.9rem 0 0.9rem 0.9rem;
       }
     }
     .state{
@@ -640,7 +640,7 @@ option {
     height:auto;
     overflow:visible;
     font-size: 1.2em;
-    margin: .5rem .5rem 0.5rem .5rem;
+    margin: 0.5rem 0.5rem 0.5rem 0.5rem;
     padding: 0;
     a{
       padding: 0;
