Move state to side search bar

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -159,12 +159,8 @@ input.search-tags-btn:hover {
   color: #fff;
 }
 
-input#search_user {
-
-  border-radius: 4px;
-  width: 160px;
-  border: 0;
-  padding-left: 5px;
+.search-type{
+  margin-bottom: 0;
 }
 
 #search-form div label {
