modify management div

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,47 +1,52 @@
 <div class ="game-show">
+  <div class="container-fluid">
   <div class="row">
-    <div class="col-sm-6">
+    <div class="col-md-6 col-sm-6">
       <h2 style="font-weight:bold; margin-bottom: 20px; color: #EF7030;"><%= @game.title %></h2>
     <p><%= @game.description %></p>
+    <!-- game management begins -->
+    <% if (user_is_dev? && @game.user_id == current_user.id ) ||
+      user_is_admin? %>
+      <p>Type:
+        <% @game.taggings.map do |tagging| %>
+        <%= Tag.find(tagging.tag_id).name %> &nbsp;|&nbsp;
+        <% end %>
+      </p>
+      <div class="container-fluid" style="background-color: steelblue">
     <%# if can?(:manage, @game) %>
     <% if user_is_admin? ||
       ( user_is_dev? && @game.user_id == current_user.id) %>
-      <%= @game.download_button %>
       <div class="radiolist">
         <%= simple_form_for(@game) do |f| %>
         <%= f.error_notification %>
-        <div>
+        <p>
+          <%= link_to "Download Game", @game.download_button, class: "btn btn-default" %>
           <% if @game.may_approve?  %>
-          <%= f.button :submit, Game::STATE_APPROVE %>
+          <%= f.button :submit, Game::STATE_APPROVE, value: "Approve Game" %>
           <% end %>
           <% if @game.may_reject? %>
-          <%= f.button :submit, Game::STATE_REJECT %>
+          <%= f.button :submit, Game::STATE_REJECT, value: "Reject Game" %>
           <% end %>
-        </div>
+        </p>
         <% end %>
       </div>
       <% end %>
 
       <%# if (can? :manage, @game ) %>
-      <% if (user_is_dev? && @game.user_id == current_user.id ) ||
-        user_is_admin? %>
-        <div>
-          <p>Type:
-            <% @game.taggings.map do |tagging| %>
-            <%= Tag.find(tagging.tag_id).name %> &nbsp;|&nbsp;
-            <% end %>
-          </p>
-        </div>
 
-        <div class="container">
-          <%= button_to "Download Pdf", game_review_path(@game.id), class:"orange" %>
-          <%= button_to "Download Game", @game.attachment_url, class:"orange" %>
-          <%= button_to "Download Crash", href="#", class:"orange" %>
+        <div>
+          <p>
+          <%= link_to "Download Pdf", game_review_path(@game.id), class:"btn btn-default" %>
+          <%= link_to "Download Game", @game.attachment_url, class:"btn btn-default" %>
+          <%= link_to "Download Crash", href="#", class:"btn btn-default" %>
+        </p>
         </div>
         <% end %>
-
+      </div>
+<!-- end of game management -->
   </div>
-  <div class="col-sm-6">
+  <div class="col-md-6 col-sm-6">
+    <!-- image carousel begins -->
   <div>
     <div id="home-slideshow" class="carousel slide" data-ride="carousel">
       <% if @game.pictures.length.zero? %>
@@ -77,8 +82,9 @@
       <% end %>
     </div>
   </div>
-  <div class="container sentences">
-    <!--  -->
+  <!-- end of image carousel -->
+  <div>
+    <!-- game stats begin -->
 
     <p class="char1">Made by: <%= @game.user_company %></p>
     <p>Date: <%= @game.formatted_created_at %></p>
@@ -86,7 +92,7 @@
     <p>Last in Arcade: <%= @game.last_in_arcade %></p>
     <p>Played: <%= @game.reviews_count %> times</p>
     <p>Overall Rating: <%= @game.reviews_count %></p>
-
+<!-- end of game stats -->
     <% if user_is_gamer? %>
          <div>
            <%= button_to "Buy", @game.link, class:"orange" %>
@@ -99,4 +105,5 @@
 </div>
 
   </div>
+</div>
 </div>
