fix games index search

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -173,6 +173,11 @@ input#search_user {
   margin-left: 20px;
 }
 
+#studio-search {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
 #search-for-studio {
   background-color: #EF7030;
   border: 0;
