update title colors

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,7 +36,7 @@
 
 <div class="home-map-intro">
   <div class="row text-center">
-    <h2>  <span class="glyphicon glyphicon-chevron-down pink" aria-hidden="true"> </span>  Find an arcade near you</h2>
+    <h2 id="indie-game-heading">  <span class="glyphicon glyphicon-chevron-down pink" aria-hidden="true"> </span>  Find an arcade near you</h2>
     <p>
       Check out the map to see the location of arcades and the games that are available.</br>
     </p>
