--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-3">
         <div class="container-index-games">
-          <%= form_tag(games_path, :method => 'get', id: 'tags') do %>
+          <%= form_tag(games_path, method: :get, id: 'tags') do %>
             <h4 id="narrow-by-tags">Narrow by tags</h4>
             <% tagged = params[:tag].present? ? params[:tag][:tag_ids] : nil%>
             <%= collection_check_boxes(:tag, :tag_ids, @tags, :id, :name, include_hidden: false, checked: tagged) do |t| %>
